[gd_scene load_steps=4 format=3 uid="uid://q0c00h6hwmcy"]

[ext_resource type="Script" path="res://Nodes/Children/Scripts/EventScene.gd" id="1_2r8re"]
[ext_resource type="Script" path="res://Nodes/Children/Scripts/payloadOptionButton.gd" id="1_ark0m"]
[ext_resource type="Script" path="res://Nodes/Children/Scripts/eventsOptionButton.gd" id="2_rv28w"]

[node name="EventScene" type="PanelContainer"]
script = ExtResource("1_2r8re")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="EventNameLabel" type="Label" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
text = "Event #1"
horizontal_alignment = 1

[node name="id" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="idLabel" type="Label" parent="VBoxContainer/id"]
layout_mode = 2
text = "   id
"

[node name="Space" type="Control" parent="VBoxContainer/id"]
layout_mode = 2
size_flags_horizontal = 6

[node name="idSpinBox" type="SpinBox" parent="VBoxContainer/id"]
custom_minimum_size = Vector2(85, 0)
layout_direction = 2
layout_mode = 2
max_value = 1000.0

[node name="eventsOptionButton" type="OptionButton" parent="VBoxContainer/id"]
visible = false
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "null"
popup/item_0/id = 0
script = ExtResource("2_rv28w")

[node name="payload" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="payloadLabel" type="Label" parent="VBoxContainer/payload"]
layout_mode = 2
text = "   payload"

[node name="Space" type="Control" parent="VBoxContainer/payload"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="payloadOptionButton" type="OptionButton" parent="VBoxContainer/payload"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "null"
popup/item_0/id = 0
script = ExtResource("1_ark0m")

[connection signal="value_changed" from="VBoxContainer/id/idSpinBox" to="." method="_on_id_spin_box_value_changed"]
[connection signal="item_selected" from="VBoxContainer/id/eventsOptionButton" to="." method="_on_events_option_button_item_selected"]
[connection signal="item_selected" from="VBoxContainer/payload/payloadOptionButton" to="." method="_on_payload_option_button_item_selected"]
